Add dependency lager_graylog for sending logs to graylog

--- a/rebar.config
+++ b/rebar.config
@@ -11,11 +11,13 @@
 
         %% Public repositories
         {lager, ".*",
-            {git, "git://github.com/basho/lager", {tag, "2.0.0"}}},
+            {git, "https://github.com/basho/lager.git", {tag, "2.0.0"}}},
+        {lager_graylog, ".*",
+            {git, "git@gitlab.erlang-solutions.com:tomasz.kowal/lager_graylog.git", "HEAD"}},
 	{emysql, ".*",
-%            {git, "git://github.com/Eonblast/Emysql.git", {tag, "0.2.16"}}}
+%            {git, "https://github.com/Eonblast/Emysql.git", {tag, "0.2.16"}}}
 %%	]}.
-	{git, "git://github.com/Eonblast/Emysql.git"}}
+	{git, "https://github.com/Eonblast/Emysql.git"}}
 	]}.
 {sys, [
 	{lib_dirs,["../deps"]},
